# rustfuck

./: .appveyor.yml  .gitignore  .travis.yml  Cargo.toml  README.md
rustfuck-lib/: Cargo.toml
rustfuck-lib/resources/: preface.c
rustfuck-lib/resources/tests/: generator_test_generate.c  hello.c
rustfuck-lib/src/: compiler.rs  error.rs  generator.rs  lexer.rs  lib.rs
rustfuck-lib/src/language/: brainfuck.rs  mod.rs
scripts/: run-examples-gcc.sh
src/: cli.rs  main.rs  quit.rs
